# libdrm-armada

./: .gitignore  Makefile.am  armada_bufmgr.c  armada_bufmgr.h  armada_ioctl.h  configure.ac  dove_bufmgr.c  dove_bufmgr.h  dove_ioctl.h  libdrm_armada.pc.in  libdrm_dove.pc.in
debian/: changelog  control  copyright  libdrm-dove1.install  libdrm-dove2.install  rules
